# neutron-host

./: .gitignore  Cargo.toml  build.sh  mod.rs  rebuild_hard.sh  rustfmt.sh  rustfmt.toml
neutron-testbench/: Cargo.toml
neutron-testbench/src/: blockchain.rs  lib.rs  main.rs  test_interface.rs
src/: callsystem.rs  codata.rs  comap_abi_decoder.rs  db.rs  harness.rs  interface.rs  lib.rs  manager.rs  narm_hypervisor.rs  neutronerror.rs  neutronmanager.rs  qx86_hypervisor.rs  testbench.rs  vmmanager.rs
src/element_interfaces/: debug_data.rs  logging.rs  mod.rs  storage.rs
src/syscall_interfaces/: logging.rs  storage.rs
tests/: README.txt  build.sh  common.rs  example_deploy_call.rs  example_new_element.rs  general_smoke.rs  harness.rs  hypervisor_comap.rs  hypervisor_comap_abi.rs  hypervisor_context_info.rs  hypervisor_costack.rs  mod.rs  neutron_star_comap_simple.rs  neutron_star_costack.rs  rebuild_hard.sh  smoke_test_deploy_call.rs  smoke_test_minimal.rs  smoke_test_new_element.rs
tests/contracts/default_env/: Cargo.toml  rustfmt.toml
tests/example_deploy_call/: mod.rs
tests/example_new_element/: mod.rs
tests/general_smoke/: mod.rs
tests/hypervisor_comap/: map_to_stack.rs  mod.rs  stack_to_map.rs  subsetting.rs
tests/hypervisor_comap_abi/: map_to_stack.rs  stack_to_map.rs  subsetting.rs
tests/hypervisor_costack/: mod.rs
tests/neutron_star_costack/: mod.rs
tests/scripts/: build.sh  rebuild_hard.sh
tests/test_comap/: mod.rs  test_map_to_stack.rs  test_stack_to_map.rs  test_subsetting.rs
tests/test_comap_abi/: mod.rs  test_map_to_stack.rs  (+2 more)
(+15 files in other folders)
